Fix #345, hero button react whitespacing fix
Change button font size to 0
Add margin-left to neighbouring children

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -124,6 +124,11 @@
   border: none;
   vertical-align: top;
   line-height: normal;
+  font-size: 0;
+
+  > * + * {
+    margin-left: 4px;
+  }
 
   .ms-Button-icon {
     color: $ms-color-themePrimary;
